# hamiltonian-learning-C

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: 1d_certified_bounds_benchmark.cpp  CMakeLists.txt  error_estimate.cpp  optimize_parameters.cpp
benchmarks/hamiltonians/: classical_ising_ferro.yml  j1j2_antiferro.yml  tf_ising_ferro.yml  xxz.yml  xxz_Jneg.yml  xxz_with_potential.yml
benchmarks/include/: pauli_utils.hpp  simulation.hpp
benchmarks/setup/: optimize_parameters_setup.yml  setup.yml  trotter_error_test_setup.yml
benchmarks/src/: pauli_utils.cpp  simulation.cpp
benchmarks/tests/: test_pauli_utils.cpp  test_simulation.cpp  test_trotter_error.cpp
include/: hamiltonian_learning.hpp  sparse_tensor.hpp
src/: hamiltonian_learning.cpp  sparse_tensor.cpp
